--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </nav>
 <!-- /navbar -->
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -70,6 +70,16 @@
    
 </head>
 
+<style Type="text/css">
+  .content{
+          max-width: 800px;
+          margin: auto;
+  }
+  h1{
+      text-align: center;
+      padding-bottom: 30px;
+  }
+</style>
 <body>
    <div class="content"> 
     <h1>Tabla de Libros</h1>                    
@@ -129,5 +139,5 @@
   <!-- Copyright -->
 
 </footer>
-<script src="scripts.js"> </script>
+<script src="https://progweb17200723.000webhostapp.com/pr%C3%A1cticas/CRUD-AJAX-PDO-03/scripts.js"> </script>
 </html>
